findbugs - fix/suppress most of warnings reported in unit tests + enable low confidence warnings for core
git-svn-id: http://josm.openstreetmap.de/svn/trunk@10222 0c6e7542-c601-0410-84e7-c038aed88b3b